src/test/deca/context/invalid/affectation-invalid-type.deca
// Description:
//    Affectation avec des types incompatibles
//
// Résultats:
//    ligne 12: type incompatible
//
// Historique:
//    Créé le 11/01/2024

{
    boolean b = true;
    b = 3;
}